// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should not render styles when unstyled prop is set 1`] = `
.emotion-1 {
  color: #3b3f45;
  margin: 0;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
  border-bottom: 1px solid #97a0af;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  padding: 0;
}

.emotion-0 {
  color: #3b3f45;
  display: inline-block;
  padding: 0.8rem 2.4rem;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #181b1c;
}

.emotion-0::after {
  display: block;
  border-bottom: 3px solid transparent;
  content: '';
  position: absolute;
  bottom: -2px;
  left: 0;
  right: 0;
}

.emotion-0:hover::after {
  border-color: #bec4cd;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

.emotion-0::after {
  border-bottom: 3px solid;
}

.emotion-5:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

.emotion-3 {
  border: 0;
  -webkit-clip-path: rect(0 0 0 0);
  clip-path: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  color: #3b3f45;
  margin: 0;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
}

<div>
  <ul
    class="emotion-1"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <a
        aria-selected="true"
        class="emotion-0"
        data-testid="firstTab"
        href="#myTabSet-section-0"
        id="myTabSet-tab-0"
        role="tab"
      >
        About
      </a>
    </li>
  </ul>
  <section
    aria-labelledby="myTabSet-tab-0"
    class="emotion-5"
    data-testid="firstTabSection"
    id="myTabSet-section-0"
    role="tabpanel"
    tabindex="-1"
  >
    <span
      class="emotion-3"
    >
      <p
        class="Nautilus-Paragraph emotion-2"
      >
        About
      </p>
    </span>
    <p
      class="Nautilus-Paragraph emotion-4"
    >
      Puppies are cute.
    </p>
  </section>
</div>
`;

exports[`Tabs should render styles for Tabs 1`] = `
.emotion-3 {
  color: #3b3f45;
  margin: 0;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
  border-bottom: 1px solid #97a0af;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  padding: 0;
}

.emotion-0 {
  color: #3b3f45;
  display: inline-block;
  padding: 0.8rem 2.4rem;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #181b1c;
}

.emotion-0::after {
  display: block;
  border-bottom: 3px solid transparent;
  content: '';
  position: absolute;
  bottom: -2px;
  left: 0;
  right: 0;
}

.emotion-0:hover::after {
  border-color: #bec4cd;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

.emotion-0::after {
  border-bottom: 3px solid;
}

.emotion-1 {
  color: #3b3f45;
  display: inline-block;
  padding: 0.8rem 2.4rem;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1::after {
  display: block;
  border-bottom: 3px solid transparent;
  content: '';
  position: absolute;
  bottom: -2px;
  left: 0;
  right: 0;
}

.emotion-1:hover::after {
  border-color: #bec4cd;
}

.emotion-1:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

.emotion-7:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

.emotion-5 {
  border: 0;
  -webkit-clip-path: rect(0 0 0 0);
  clip-path: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-6 {
  color: #3b3f45;
  margin: 0;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
}

.emotion-11 {
  display: none;
}

.emotion-11:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

<div>
  <ul
    class="emotion-3"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <a
        aria-selected="true"
        class="emotion-0"
        data-testid="firstTab"
        href="#myTabSet-section-0"
        id="myTabSet-tab-0"
        role="tab"
      >
        About
      </a>
    </li>
    <li
      role="presentation"
    >
      <a
        aria-selected="false"
        class="emotion-1"
        data-testid="secondTab"
        href="#myTabSet-section-1"
        id="myTabSet-tab-1"
        role="tab"
        tabindex="-1"
      >
        History
      </a>
    </li>
    <li
      role="presentation"
    >
      <a
        aria-selected="false"
        class="emotion-1"
        data-testid="thirdTab"
        href="#myTabSet-section-2"
        id="myTabSet-tab-2"
        role="tab"
        tabindex="-1"
      >
        Other
      </a>
    </li>
  </ul>
  <section
    aria-labelledby="myTabSet-tab-0"
    class="emotion-7"
    data-testid="firstTabSection"
    id="myTabSet-section-0"
    role="tabpanel"
    tabindex="-1"
  >
    <span
      class="emotion-5"
    >
      <p
        class="Nautilus-Paragraph emotion-4"
      >
        About
      </p>
    </span>
    <p
      class="Nautilus-Paragraph emotion-6"
    >
      Puppies are cute.
    </p>
  </section>
  <section
    aria-labelledby="myTabSet-tab-1"
    class="emotion-11"
    data-testid="secondTabSection"
    id="myTabSet-section-1"
    role="tabpanel"
    tabindex="-1"
  >
    <span
      class="emotion-5"
    >
      <p
        class="Nautilus-Paragraph emotion-4"
      >
        History
      </p>
    </span>
    <p
      class="Nautilus-Paragraph emotion-6"
    >
      Puppies have already been cute.
    </p>
  </section>
  <section
    aria-labelledby="myTabSet-tab-2"
    class="emotion-11"
    data-testid="thirdTabSection"
    id="myTabSet-section-2"
    role="tabpanel"
    tabindex="-1"
  >
    <span
      class="emotion-5"
    >
      <p
        class="Nautilus-Paragraph emotion-4"
      >
        Other
      </p>
    </span>
    <p
      class="Nautilus-Paragraph emotion-6"
    >
      I have run out of things to say in this test.
    </p>
  </section>
</div>
`;

exports[`Tabs shouldn't have a margin when \`noMargin\` is true 1`] = `
.emotion-0 {
  color: #3b3f45;
  display: inline-block;
  padding: 0.8rem 2.4rem;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #181b1c;
}

.emotion-0::after {
  display: block;
  border-bottom: 3px solid transparent;
  content: '';
  position: absolute;
  bottom: -2px;
  left: 0;
  right: 0;
}

.emotion-0:hover::after {
  border-color: #bec4cd;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

.emotion-0::after {
  border-bottom: 3px solid;
}

.emotion-5:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

.emotion-3 {
  border: 0;
  -webkit-clip-path: rect(0 0 0 0);
  clip-path: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-4 {
  color: #3b3f45;
  margin: 0;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
}

.emotion-1 {
  color: #3b3f45;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
  border-bottom: 1px solid #97a0af;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  padding: 0;
}

<div>
  <ul
    class="emotion-1"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <a
        aria-selected="true"
        class="emotion-0"
        data-testid="firstTab"
        href="#myTabSet-section-0"
        id="myTabSet-tab-0"
        role="tab"
      >
        About
      </a>
    </li>
  </ul>
  <section
    aria-labelledby="myTabSet-tab-0"
    class="emotion-5"
    data-testid="firstTabSection"
    id="myTabSet-section-0"
    role="tabpanel"
    tabindex="-1"
  >
    <span
      class="emotion-3"
    >
      <p
        class="Nautilus-Paragraph emotion-2"
      >
        About
      </p>
    </span>
    <p
      class="Nautilus-Paragraph emotion-4"
    >
      Puppies are cute.
    </p>
  </section>
</div>
`;
